--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 <body>
   <div class="todoapp">
     <form id="js-form">
-      <input type="text" id="js-form-input" class="new-todo" placeholder="What need to be done?" autocomplete="off" />
+      <input type="text" id="js-form-input" class="new-todo" placeholder="What need to be done?" autocomplete="off">
     </form>
-    <div id="id" class="todo-list"></div>
-    <footer class="footer">
-      <span id="js-todo-count">Todoアイテム数: 0</span>
-    </footer>
   </div>
+  <div id="js-todo-list" class="todo-list"></div>
+  <footer class="footer">
+    <span id="js-todo-count">Todoアイテム数：0</span>
+  </footer>
   <script src='./index.ts'></script>
 </body>
 
