✨ add type="module"
* https://github.com/parcel-bundler/parcel/discussions/6490

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <span id="js-todo-count">Todoアイテム数：0</span>
     </footer>
   </div>
-  <script src='./index.ts'></script>
+  <script src='./index.ts' type="module"></script>
 </body>
 
 </html>
